# dozz

./: .coverage  README.md  flake8  main.py  pyproject.toml
logs/: mylog.txt
src/: Category.py  Production.py  Search_trans.py  decorators.py  external_api.py  filter_world.py  generators.py  logger.py  main.py  masks.py  processing.py  read_excel.py  reports.py  services.py  utils.py  views.py  widget.py
tests/: conftest.py  test_1.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_reports.py  test_utils.py
