[tool.poetry]
name = "dz-7"
version = "0.1.0"
description = ""
authors = ["Oleg <logardyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/

)
'''
[tool.isort]
line_length = 119

[tool.pytest.ini_options]
testpaths = ["tests"]